--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,12 @@ pizza_hut:
 
 milktea:
   - jp.panta.misskeyandroidclient/jp.panta.misskeyandroidclient.MainActivity
+
+appdrop:
+  - com.bulk.uninstall/com.bulk.uninstall.main.LauncherActivity
+
+noterly:
+  - uk.co.tdsstudios.noterly/uk.co.tdsstudios.noterly.MainActivity
+
+screw_calculator:
+  - com.megTech.screw_calc/com.megTech.screw_calc.MainActivity
