--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -143,3 +143,9 @@ neostumbler:
 
 overmorrow:
   - com.marotidev.Overmorrow/com.example.overmorrow.MainActivity
+
+camera:
+  - org.derpfest.flash/org.derpfest.flash.CameraLauncher
+
+clock:
+  - com.best.deskclock/com.best.deskclock.FirstLaunch
