add icons&componentinfo (#875)
* add icons

* add componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,3 +125,27 @@ noterly:
 
 screw_calculator:
   - com.megTech.screw_calc/com.megTech.screw_calc.MainActivity
+
+broccoli:
+  - com.flauschcode.broccoli/com.flauschcode.broccoli.MainActivity
+
+brume_wallet:
+  - eth.brume.wallet/eth.brume.wallet.MainActivity
+
+frigoligo:
+  - net.casimirlab.frigoligo/net.casimirlab.frigoligo.MainActivity
+
+moviedb:
+  - com.wirelessalien.android.moviedb/com.wirelessalien.android.moviedb.activity.MainActivity
+
+neostumbler:
+  - xyz.malkki.neostumbler.fdroid/xyz.malkki.neostumbler.MainActivity
+
+overmorrow:
+  - com.marotidev.Overmorrow/com.example.overmorrow.MainActivity
+
+camera:
+  - org.derpfest.flash/org.derpfest.flash.CameraLauncher
+
+clock:
+  - com.best.deskclock/com.best.deskclock.FirstLaunch
