add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -149,3 +149,18 @@ camera:
 
 clock:
   - com.best.deskclock/com.best.deskclock.FirstLaunch
+
+aosp_mods:
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityNormalIcon
+
+stellarium:
+  - com.noctuasoftware.stellarium_plus/com.stellariumlabs.stellarium.mobile.StellariumPlus
+
+positional_simple:
+  - app.simple.positional.lite/app.simple.positional.activities.alias.IconElevenAlias
+
+github:
+  - com.github.android/com.github.android.main.MainActivity
+
+exploding_kittens:
+  - com.netflix.NGP.ExplodingKittens/com.unity3d.player.UnityPlayerActivity
