--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,54 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+alexandria:
+  - io.github.aloussase.booksdownloader/io.github.aloussase.booksdownloader.ui.MainActivity
+
+classeviva_famiglia:
+  - eu.spaggiari.classevivafamiglia/eu.spaggiari.classeviva.classeviva.MainActivity
+
+crypto_id:
+  - io.gitlab.cryptographic_id/io.gitlab.cryptographic_id.MainActivity
+
+databag:
+  - com.databag/com.databag.MainActivity
+
+fastscore:
+  - com.fastscore.FastScore1/com.fastscore.FastScore1.MainActivity
+
+forkyz_scanner:
+  - app.crossword.yourealwaysbe.forkyzscanner/app.crossword.yourealwaysbe.forkyzscanner.ForkyzScannerActivity
+
+k19_player:
+  - ch.ulys.k19player/com.ryanheise.audioservice.AudioServiceActivity
+
+night_city_map:
+  - de.simono.nightcitymap/de.simono.nightcitymap.MainActivity
+
+omweather:
+  - org.woheller69.omweather/org.woheller69.weather.activities.SplashActivity
+
+oshi_uploader:
+  - org.codeberg.quecomet.oshi/org.codeberg.quecomet.oshi.MainActivity
+
+portdroid:
+  - com.stealthcopter.portdroid/com.stealthcopter.portdroid.activities.StartActivity
+
+pulsar_foss:
+  - ds.pulsar/com.ds.pulsar.MainActivity
+
+quire:
+  - io.quire.app/io.quire.app.activity.MainActivity
+
+skiplagged:
+  - com.skiplagged/com.skiplagged.MainActivity
+
+spam_blocker:
+  - spam.blocker/spam.blocker.ui.main.MainActivity
+
+sshd4a:
+  - com.hardbacknutter.sshd/com.hardbacknutter.sshd.MainActivity
+
+tesco_grocery:
+  - com.tesco.grocery.view/com.tesco.mobile.titan.splash.view.SplashActivity
