--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,9 @@ sshd4a:
 
 tesco_grocery:
   - com.tesco.grocery.view/com.tesco.mobile.titan.splash.view.SplashActivity
+
+accord:
+  - uk.akane.accord/org.akanework.gramophone.ui.MainActivity
+
+linwood_butterfly:
+  - dev.linwood.butterfly.nightly/dev.linwood.butterfly.MainActivity
