Fix Fulguris, Obtainium and Tempo
Adds additional ComponentInfo for F-Droid builds of mentioned apps.

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,11 +36,17 @@ fastscore:
 forkyz_scanner:
   - app.crossword.yourealwaysbe.forkyzscanner/app.crossword.yourealwaysbe.forkyzscanner.ForkyzScannerActivity
 
+fulguris:
+  - net.slions.fulguris.full.fdroid/fulguris.activity.SplashActivity
+
 k19_player:
   - ch.ulys.k19player/com.ryanheise.audioservice.AudioServiceActivity
 
 night_city_map:
   - de.simono.nightcitymap/de.simono.nightcitymap.MainActivity
+
+obtainium:
+  - dev.imranr.obtainium.fdroid/dev.imranr.obtainium.MainActivity
 
 omweather:
   - org.woheller69.omweather/org.woheller69.weather.activities.SplashActivity
@@ -65,6 +71,9 @@ spam_blocker:
 
 sshd4a:
   - com.hardbacknutter.sshd/com.hardbacknutter.sshd.MainActivity
+
+tempo:
+  - com.cappielloantonio.notquitemy.tempo/com.cappielloantonio.tempo.ui.activity.MainActivity
 
 tesco_grocery:
   - com.tesco.grocery.view/com.tesco.mobile.titan.splash.view.SplashActivity
