--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,6 +36,9 @@ fastscore:
 forkyz_scanner:
   - app.crossword.yourealwaysbe.forkyzscanner/app.crossword.yourealwaysbe.forkyzscanner.ForkyzScannerActivity
 
+fulguris:
+  - net.slions.fulguris.full.fdroid/fulguris.activity.SplashActivity
+
 k19_player:
   - ch.ulys.k19player/com.ryanheise.audioservice.AudioServiceActivity
 
@@ -65,6 +68,9 @@ spam_blocker:
 
 sshd4a:
   - com.hardbacknutter.sshd/com.hardbacknutter.sshd.MainActivity
+
+tempo:
+  - com.cappielloantonio.notquitemy.tempo/com.cappielloantonio.tempo.ui.activity.MainActivity
 
 tesco_grocery:
   - com.tesco.grocery.view/com.tesco.mobile.titan.splash.view.SplashActivity
