--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,6 @@ accord:
 
 linwood_butterfly:
   - dev.linwood.butterfly.nightly/dev.linwood.butterfly.MainActivity
+
+mj_pdf_reader:
+  - com.gitlab.mudlej.MjPdfReader/com.gitlab.mudlej.MjPdfReader.ui.main.MainActivity
