--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -83,3 +83,27 @@ linwood_butterfly:
 
 mj_pdf_reader:
   - com.gitlab.mudlej.MjPdfReader/com.gitlab.mudlej.MjPdfReader.ui.main.MainActivity
+
+capturesposed:
+  - com.keshav.capturesposed/com.keshav.capturesposed.MainActivity
+
+crabhands:
+  - crabhands.android/crc64e490453898eea56d.SplashActivity
+
+green_wallet_bitcoin:
+  - com.greenaddress.greenbits_android_wallet/com.blockstream.green.ui.MainActivity
+
+labplus:
+  - dev.labplus.app/dev.labplus.app.MainActivity
+
+listenbrainz:
+  - org.listenbrainz.android/org.listenbrainz.android.ui.screens.main.MainActivity
+
+mindfulness_meditation:
+  - biz.binarysolutions.mindfulnessmeditation/biz.binarysolutions.mindfulnessmeditation.MainActivity
+
+notifications_recovery:
+  - com.alftendev.notlistener/com.android.whatsappbackup.activities.MainActivity
+
+password_monitor:
+  - com.password.monitor/com.password.monitor.activities.MainActivity
