--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,58 @@ notifications_recovery:
 
 password_monitor:
   - com.password.monitor/com.password.monitor.activities.MainActivity
+
+aimo:
+  - com.aimoone.app/com.aimoone.MainActivity
+
+billetera_santa_fe:
+  - com.pluspagos.mobile/crc64bf72121a02ea0b39.SplashActivity
+
+confirmtkt:
+  - com.confirmtkt.lite/com.confirmtkt.lite.LaunchActivity
+
+desmos_scientific_calculator:
+  - com.desmos.scientific/com.desmos.calculator.MainActivity
+
+ebidfood:
+  - com.farutexmobile/com.farutexmobile.MainActivity
+
+egovph:
+  - egov.app/com.dict.egov.ui.splash.SplashActivity
+
+hwmonitor_pro:
+  - com.cpuid.hwmonitorpro/com.cpuid.hwmonitorpro.MainActivity
+
+imagesearchman:
+  - sansunsen3.imagesearcher/sansunsen3.imagesearcher.activity.MainActivity
+
+mackolik:
+  - com.kokteyl.mackolik/com.perform.livescores.presentation.views.activities.SplashActivity
+
+morse_code:
+  - holecek.pavel.MorseCode/crc648bbdc909d4b41b63.MainActivity
+
+navimaps:
+  - com.mmi.navimaps/hr.mireo.arthur.common.App
+
+netgear_mobile:
+  - com.sierrawireless.mhswatcher/com.sierrawireless.mhswatcher.MainScreen
+
+notification_light_for_samsung:
+  - com.jamworks.aodnotificationledlight/com.jamworks.aodnotificationledlight.SettingsHome
+  - com.jamworks.alwaysondisplay/com.jamworks.alwaysondisplay.SettingsHome
+
+paraphraser:
+  - me.jagar.paraphraser/me.jagar.paraphraser.activities.SplashActivity
+
+plant_care_reminder:
+  - com.atcorapps.plantcarereminder/com.atcorapps.plantcarereminder.MainActivity
+
+rtl_travel_app:
+  - com.scsoft.maldivesrtl/com.scsoft.maldivesrtl.MainActivity
+
+sram_axs:
+  - com.sram.armyknife/com.sram.armyknifecore.MainActivity
+
+uf_recposrts:
+  - com.innosoftfusiongo.universityofflorida/com.innosoftfusiongo.universityofflorida.UniversityoffloridaSplashActivity
