--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,6 @@ soundtap:
 
 videos_foss:
   - com.projectmaterial.videos/com.projectmaterial.videos.activity.VideoLibraryActivity
+
+neo_backup:
+  - com.machiav3lli.backup.neo/com.machiav3lli.backup.activities.MainActivityX
