add icons&componentinfo (#883)
* add icons

* small fix

* add componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,30 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+fitbook:
+  - com.presley.fit_book/com.presley.fit_book.MainActivity
+
+flicky_bee:
+  - org.lettucepie.flickybee/com.godot.game.GodotApp
+
+material_photo_widget:
+  - com.fibelatti.photowidget/com.fibelatti.photowidget.home.HomeActivity
+
+paperize:
+  - com.anthonyla.paperize/com.anthonyla.paperize.feature.wallpaper.presentation.MainActivity
+
+pilipalax:
+  - com.orz12.PiliPalaX/com.orz12.PiliPalaX.MainActivity
+
+power_ampache_2:
+  - luci.sixsixsix.powerampache2.fdroid/luci.sixsixsix.powerampache2.presentation.MainActivity
+
+soundtap:
+  - fr.angel.soundtap/fr.angel.soundtap.MainActivity
+
+videos_foss:
+  - com.projectmaterial.videos/com.projectmaterial.videos.activity.VideoLibraryActivity
+
+neo_backup:
+  - com.machiav3lli.backup.neo/com.machiav3lli.backup.activities.MainActivityX
