Added icons for :     - Allstar     - Bunny Manager     - CS Money     - Dealabs     - Discord Bunny     - DS Finder     - DS Get     - DS Router     - Edusign     - Edusign Intervenant     - Freebox Connect     - Lensa     - Molotov TV     - OLED Buddy     - Pathé Gaumont     - Pearltrees     - Skolae     - Starri     - Synology MailPlus     - Transdev     - V-Hive

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,76 @@ videos_foss:
 
 neo_backup:
   - com.machiav3lli.backup.neo/com.machiav3lli.backup.activities.MainActivityX
+
+allstar:
+  - com.androidapp.gg.allstar/com.androidapp.gg.allstar.MainActivity
+
+bunny_manager:
+  - io.github.pyoncord.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
+
+cs_money:
+  - com.csmoneymobile/com.csmoneymobile.MainActivity
+  - com.csmoneymobile/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+dealabs:
+  - com.dealabs.apps.android/com.pepper.apps.android.presentation.MainActivity
+  - com.dealabs.apps.android/com.pepper.apps.android.presentation.MainActivityDarkIcon
+
+discord_bunny:
+  - io.github.pyoncord.app/com.discord.main.MainDefault
+
+discord_bunny_alt1: {}
+
+ds_finder:
+  - com.synology.DSfinder/com.synology.assistant.ui.activity.SplashActivity
+
+ds_get:
+  - com.synology.DSdownload/com.synology.DSdownload.activities.SplashActivity
+
+ds_router:
+  - com.synology.dsrouter/com.synology.dsrouter.SplashActivity
+
+edusign:
+  - fr.dylantxa.edusign/fr.dylantxa.edusign.MainActivity
+
+edusign_intervenant:
+  - com.edusign.teacher/com.edusign.teacher.MainActivity
+
+edusign_intervenant_alt_1: {}
+
+freebox_connect:
+  - fr.freebox.network/networkapp.presentation.main.ui.MainActivity
+
+lensa:
+  - com.lensa.app/com.lensa.original
+
+lensa_alt_1: {}
+
+molotov:
+  - tv.molotov.app/tv.molotov.android.splash.SplashActivity
+
+oled_buddy:
+  - me.mikecroall.oledbuddy/me.mikecroall.oledbuddy.HomeActivity
+
+oled_buddy_alt_1: {}
+
+pathe_gaumont:
+  - com.brocelia.cgp/com.cinemaspathegaumont.cgp.ui.activity.SplashActivity
+
+pearltrees:
+  - com.pearltrees.android.prod/com.broceliand.pearldroid.ui.launch.LaunchActivity
+
+skolae:
+  - com.reseauges.skolae/com.reseauges.skolae.activities.SplashActivity
+
+starri:
+  - team.nex.starri/team.nex.starri.StarriPlayerActivity
+
+synology_mailplus:
+  - com.synology.dsmail/com.synology.dsmail.activities.SplashActivity
+
+transdev:
+  - com.transdevidf.android/com.transdevidf.android.ui.MainActivity
+
+vhive:
+  - gg.vitality.hive/gg.vitality.hive.MainActivity
