--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,18 @@ transdev:
 
 vhive:
   - gg.vitality.hive/gg.vitality.hive.MainActivity
+
+blockit:
+  - com.hypenet.focused/it.mirko.activities.StartActivity
+
+fontasy:
+  - com.youthhr.fontasy/com.youthhr.fontasy.GoogleFontActivity
+
+randomizer:
+  - com.giannis.randomizer/com.giannis.randomizer.MainActivity
+
+sa7wa:
+  - com.agsoft.ps_product_barcode_search/com.agsoft.ps_product_barcode_search.MainActivity
+
+spatial_touch:
+  - io.vtouch.spatial_touch/io.vtouch.spatial_touch.MainActivity
