--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -102,6 +102,19 @@ transdev:
 vhive:
   - gg.vitality.hive/gg.vitality.hive.MainActivity
 
+
+virgin_australia:
+  - com.virginaustralia.vaapp/com.virginaustralia.vaapp.StartingActivity
+
+cashrewards:
+  - com.cashrewards/com.cashrewards.LaunchActivity
+
+youi:
+  - youi.clientapp/com.youi.client.MainActivity
+
+aami:
+  - au.com.aami.marketplace/au.com.suncorp.marketplace.base.presentation.startup.view.MainActivity
+
 blockit:
   - com.hypenet.focused/it.mirko.activities.StartActivity
 
