--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -129,3 +129,39 @@ sa7wa:
 
 spatial_touch:
   - io.vtouch.spatial_touch/io.vtouch.spatial_touch.MainActivity
+
+c2_password:
+  - com.synology.c2.password/com.synology.c2.password.MainActivity
+
+dropbox_passwords:
+  - com.dropbox.passwords_android/io.valt.valtandroid.shared.ui.LaunchActivity
+
+easy_notes:
+  - com.kin.easynotes/com.kin.easynotes.presentation.MainActivity
+
+math_theory:
+  - com.sangaku.maths.en/com.sangaku.maths.en.MainActivity
+
+minha_claro_movel:
+  - com.nvt.cs/com.claroapp.MainActivity
+
+myt_by_toyota:
+  - app.mytoyota.toyota.com.mytoyota/com.toyota.myservices.StartingActivity
+
+my_liverpool:
+  - uk.ac.liverpool.welcomeweek/uk.ac.liverpool.welcomeweek.MainActivity
+
+omni:
+  - uk.akane.omni/uk.akane.omni.ui.MainActivity
+
+onekeepass:
+  - com.onekeepassmobile/com.onekeepassmobile.MainActivity
+
+pilltime:
+  - com.cliambrown.pilltime/com.cliambrown.pilltime.MainActivity
+
+robosats:
+  - com.robosats/com.robosats.MainActivity
+
+weebly:
+  - com.weebly.android/com.weebly.android.base.activities.SplashActivity
