--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 meditrack:
   - projects.medicationtracker/projects.medicationtracker.MainActivity
+
+insular:
+  - com.oasisfeng.island.fdroid/com.oasisfeng.island.settings.IslandSettingActivity
