add componentinfo. closes #888

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ meditrack:
 
 insular:
   - com.oasisfeng.island.fdroid/com.oasisfeng.island.settings.IslandSettingActivity
+
+simple_camera:
+  - com.simplemobiletools.camera/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity.Orange
