add some stuff (#889)
* add icons

* add componentinfo

* add componentinfo. closes #888

* move manually icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+meditrack:
+  - projects.medicationtracker/projects.medicationtracker.MainActivity
+
+insular:
+  - com.oasisfeng.island.fdroid/com.oasisfeng.island.settings.IslandSettingActivity
+
+simple_camera:
+  - com.simplemobiletools.camera/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity.Orange
