--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,12 @@ insular:
 
 simple_camera:
   - com.simplemobiletools.camera/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity.Orange
+
+cara:
+  - com.caraproject.app/com.caraproject.app.MainActivity
+
+instashop:
+  - com.stedor.instashop/com.stedor.instashop.splash.view.SplashActivity
+
+my_we:
+  - com.ucare.we/com.ucare.we.MainActivity
