--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,12 @@ instashop:
 
 my_we:
   - com.ucare.we/com.ucare.we.MainActivity
+  
+concordia:
+  - ca.concordia.adobe/com.twixlmedia.articlelibrary.ui.activities.TWXProjectActivity
+  
+harbor:
+  - org.futo.harbor_flutter/org.futo.harbor_flutter.MainActivity
+  
+smart_pianist:
+  - jp.co.yamaha.smartpianist/com.yamaha.sp_front.MainActivity
