--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,7 @@ harbor:
   
 smart_pianist:
   - jp.co.yamaha.smartpianist/com.yamaha.sp_front.MainActivity
+  
+chmate:
+  - jp.co.airfront.android.a2chMate/jp.syoboi.a2chMate.activity.HomeActivity
+
