--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -39,3 +39,5 @@ smart_pianist:
 chmate:
   - jp.co.airfront.android.a2chMate/jp.syoboi.a2chMate.activity.HomeActivity
 
+agl:
+  - agl.digital.mobile/au.com.agl.aglenergydev.view.host.HostActivity
