--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,24 @@ chmate:
 
 agl:
   - agl.digital.mobile/au.com.agl.aglenergydev.view.host.HostActivity
+
+oss_card_wallet:
+  - com.akylas.cardwallet/com.akylas.cardwallet.MainActivity
+
+play_notepad:
+  - com.mshdabiola.playnotepad.foss/com.mshdabiola.playnotepad.MainActivity
+
+runnerup:
+  - org.runnerup.free/org.runnerup.view.MainLayout
+
+simple_search:
+  - de.tobiasbielefeld.searchbar/de.tobiasbielefeld.searchbar.ui.MainActivity
+
+floating_timer:
+  - xyz.tberghuis.floatingtimer/xyz.tberghuis.floatingtimer.MainActivity
+
+gpay_business:
+  - com.google.android.apps.nbu.paisa.merchant/com.google.android.apps.nbu.paisa.merchant.launcher.MerchantLauncherActivity
+
+sdai_foss:
+  - com.shifthackz.aisdv1.app.foss/com.shifthackz.aisdv1.presentation.activity.AiStableDiffusionActivity
