--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,12 @@ gpay_business:
 
 sdai_foss:
   - com.shifthackz.aisdv1.app.foss/com.shifthackz.aisdv1.presentation.activity.AiStableDiffusionActivity
+
+shkiper:
+  - com.jobik.shkiper/com.jobik.shkiper.activity.MainActivity
+
+tata_play:
+  - com.ryzmedia.tatasky/com.ryzmedia.tatasky.Ipl
+
+testbook:
+  - com.testbook.tbapp/com.testbook.tbapp.android.router.RouterActivity
