add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -71,3 +71,18 @@ tata_play:
 
 testbook:
   - com.testbook.tbapp/com.testbook.tbapp.android.router.RouterActivity
+
+booking_com:
+  - com.booking/com.booking.startup.HomeActivityDefaultIcon
+
+discover:
+  - com.discoverfinancial.mobile/lf0af873a.e37dcd7f3.a55198c2f.x72a99b04
+
+chime:
+  - com.onedebit.chime/com.onedebit.chime.MainActivity
+
+timetac:
+  - com.timetac/com.timetac.MainActivity
+
+takeaway:
+  - com.yopeso.lieferando/com.justeat.splash.ui.SplashActivity
