new icon: Apteka.ru

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -86,3 +86,6 @@ timetac:
 
 takeaway:
   - com.yopeso.lieferando/com.justeat.splash.ui.SplashActivity
+
+apteka_ru:
+  - ru.apteka/ru.apteka.androidApp.MainActivity
