new compinfo: Carrefour

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,6 @@ takeaway:
 
 apteka_ru:
   - ru.apteka/ru.apteka.androidApp.MainActivity
+
+carrefour:
+  - ar.com.carrefourargentina.app/ar.com.carrefourargentina.app.MainActivity
