new compinfo: Yandex.Taxi

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -92,3 +92,6 @@ apteka_ru:
 
 carrefour:
   - ar.com.carrefourargentina.app/ar.com.carrefourargentina.app.MainActivity
+
+yandex_taxi:
+  - ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity
