--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,6 @@ carrefour:
 
 yandex_taxi:
   - ru.yandex.taxi/ru.yandex.taxi.activity.MainActivity
+
+runescape:
+  - com.jagex.runescape.android/com.jagex.android.MainActivity
