new compinfo: TakeAway

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -86,6 +86,7 @@ timetac:
 
 takeaway:
   - com.yopeso.lieferando/com.justeat.splash.ui.SplashActivity
+  - com.eat.ch/com.takeaway.android.activity.Splash
 
 apteka_ru:
   - ru.apteka/ru.apteka.androidApp.MainActivity
