new compinfo: Beeper

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -99,3 +99,6 @@ yandex_taxi:
 
 runescape:
   - com.jagex.runescape.android/com.jagex.android.MainActivity
+
+beeper:
+  - com.beeper.android/com.beeper.chat.booper.MainActivity
