new compinfo: Sanskrit

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -102,3 +102,6 @@ runescape:
 
 beeper:
   - com.beeper.android/com.beeper.chat.booper.MainActivity
+
+sanskrit:
+  - com.vedaant.sanskritlearner/com.vedaant.sanskritlearner.MainActivity
