--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -105,3 +105,30 @@ beeper:
 
 sanskrit:
   - com.vedaant.sanskritlearner/com.vedaant.sanskritlearner.MainActivity
+
+yosu:
+  - com.berry.yosu/crc64ff3e31ae96ded802.MainActivity}
+
+thefor_habit_tracker:
+  - xyz.thefor.habits.habits/xyz.thefor.habits.habits.MainActivity
+
+scroll_block:
+  - com.vishal2376.scrollblock/com.vishal2376.scrollblock.MainActivity
+
+rtranslator:
+  - nie.translator.rtranslator/nie.translator.rtranslator.LoadingActivity}
+
+memories:
+  - gallery.memories/gallery.memories.MainActivity
+
+familysearch_tree:
+  - org.familysearch.mobile/org.familysearch.mobile.ui.activity.LauncherActivity
+
+agorae:
+  - app.agorae/app.agorae.MainActivity
+
+canadas_outdoor_farm_show:
+  - com.mapyourshow.COFSMobileApp/com.COFS23.MainActivity
+
+calgary_stampede:
+  - com.ceasl.calgarystampede/com.ceasl.calgarystampede.ui.SplashActivity
