--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -132,3 +132,18 @@ canadas_outdoor_farm_show:
 
 calgary_stampede:
   - com.ceasl.calgarystampede/com.ceasl.calgarystampede.ui.SplashActivity
+
+camera:
+  - com.teracube.cameranext/com.teracube.cameranext.CameraLauncher
+
+taco_bell:
+  - com.tacobell.canada/com.tacobell.canada.MainActivity
+
+wendys:
+  - com.wendys.nutritiontool/com.wendys.nutritiontool.MainActivity
+
+quick_edit:
+  - com.rhmsoft.edit.pro/com.rhmsoft.edit.activity.MainActivity
+
+candybar_dev:
+  - com.candybar.dev/com.candybar.dev.activities.MainActivity
