new icon: Techcombank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 sutochno:
   - ru.sutochno_redesign/ru.sutochno.android.ui.activity.LauncherActivity
+
+techcombank:
+  - vn.com.techcombank.bb.app/com.techcombank.retail.DEFAULT
