new icon: Abema.tv

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ sutochno:
 
 techcombank:
   - vn.com.techcombank.bb.app/com.techcombank.retail.DEFAULT
+
+abema_tv:
+  - tv.abema/tv.abema.components.activity.LauncherActivity
