new icon: Banco de Venezuela

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ techcombank:
 
 abema_tv:
   - tv.abema/tv.abema.components.activity.LauncherActivity
+
+banco_de_venezuela:
+  - com.bancodevenezuela.bdvdigital/com.gracaconsultores.bdvdigital.MainActivity
