new icon: UniFi Protect

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ abema_tv:
 
 banco_de_venezuela:
   - com.bancodevenezuela.bdvdigital/com.gracaconsultores.bdvdigital.MainActivity
+
+unifi_protect:
+  - com.ubnt.unifi.protect/com.ubnt.sections.splash.AuthenticationActivity
