new icon: Superlist

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ banco_de_venezuela:
 
 unifi_protect:
   - com.ubnt.unifi.protect/com.ubnt.sections.splash.AuthenticationActivity
+
+superlist:
+  - com.superlist.superlist/com.superlist.superlist.MainActivity
