--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,21 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+sutochno:
+  - ru.sutochno_redesign/ru.sutochno.android.ui.activity.LauncherActivity
+
+techcombank:
+  - vn.com.techcombank.bb.app/com.techcombank.retail.DEFAULT
+
+abema_tv:
+  - tv.abema/tv.abema.components.activity.LauncherActivity
+
+banco_de_venezuela:
+  - com.bancodevenezuela.bdvdigital/com.gracaconsultores.bdvdigital.MainActivity
+
+unifi_protect:
+  - com.ubnt.unifi.protect/com.ubnt.sections.splash.AuthenticationActivity
+
+superlist:
+  - com.superlist.superlist/com.superlist.superlist.MainActivity
