--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,9 @@ gohenry:
 
 my_benefits:
   - ca.mybenefits.mobile/com.tns.NativeScriptActivity
+
+appteka:
+  - com.tomclaw.appsend/com.tomclaw.appsend.screen.home.HomeActivity
+
+flixclusive:
+  - com.flixclusive/com.flixclusive.mobile.MobileActivity
