--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,27 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+calculator_you:
+  - com.marktka.calculatorYou/com.forz.calculator.MainActivity
+
+capy_reader:
+  - com.capyreader.app.free/com.capyreader.app.MainActivity
+
+fadcam:
+  - com.fadcam/com.fadcam.MainActivity
+
+meditationtimer:
+  - com.exner.tools.meditationtimer/com.exner.tools.meditationtimer.MainActivity
+
+rush:
+  - com.shub39.rush/com.shub39.rush.MainActivity
+
+streamflix:
+  - com.tanasi.streamflix/com.tanasi.streamflix.activities.main.MainMobileActivity
+
+tack:
+  - xyz.zedler.patrick.tack/xyz.zedler.patrick.tack.activity.SplashActivity
+
+vat_calculator:
+  - biz.binarysolutions.vatcalculator/biz.binarysolutions.vatcalculator.Main
