--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,7 @@ tack:
 
 vat_calculator:
   - biz.binarysolutions.vatcalculator/biz.binarysolutions.vatcalculator.Main
+
+innertune:
+  - com.malopieds.innertune/com.malopieds.innertune.MainActivity
+  - com.malopieds.innertune/com.malopieds.innertune.ui.activities.MainActivity
