add icons, credits @vegeta9900 on discord

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,31 @@ vat_calculator:
 innertune:
   - com.malopieds.innertune/com.malopieds.innertune.MainActivity
   - com.malopieds.innertune/com.malopieds.innertune.ui.activities.MainActivity
+
+dinamalar:
+  - com.softcraft.dinamalar/com.softcraft.dinamalar.view.activity.SplashActivity
+
+google_gemini_alt_1: {}
+
+infi:
+  - co.lenord.tvpgt/co.classplus.app.ui.common.splash.KSplashActivity
+
+jiojoin:
+  - com.jio.jse/com.jio.jse.mobile.ui.activity.SplashScreenActivity
+
+jiojoin_alt_1: {}
+
+soundbound:
+  - in.shabinder.soundbound/in.shabinder.soundbound.MainActivity
+
+stock_market_simulator:
+  - com.threeinvesteers.app/com.threeinvesteers.app.MainActivity
+
+sun_nxt:
+  - com.suntv.sunnxt/com.android.myplex.ui.sun.activities.SplashActivity
+
+tooly:
+  - com.yousx.thetoolsapp/com.yousx.thetoolsapp.SplashScreenActivity
+
+videosummarizer:
+  - com.emote.youtube_summarizer/com.emote.youtube_summarizer.MainActivity
