--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -64,3 +64,48 @@ tooly:
 
 videosummarizer:
   - com.emote.youtube_summarizer/com.emote.youtube_summarizer.MainActivity
+
+amazon_freevee:
+  - com.amazon.imdb.tv.mobile.app/com.amazon.imdb.tv.mobile.app.rn.PlatformReactNativeActivity
+
+bpi:
+  - com.bpi.ng.app/com.bpi.ng.app.presentation.views.MainActivity
+
+caliber_strength_training:
+  - com.caliberfitness.app/com.caliberfitness.app.MainActivity
+
+cent_mobile:
+  - com.infrasofttech.CentralBank/com.infrasofttech.centralbank.SplashActivity
+
+crumblr:
+  - crumbl.cookies/com.crumbl.ui.SplashActivity
+
+flight_centre_mastercard:
+  - nz.co.flexicards.flightcentre/nz.co.flexicards.app.splash.SplashActivity
+
+forest_ebike_sharing:
+  - app.humanforest/com.example.forest_app.MainActivity
+
+graphene_info:
+  - app.grapheneos.info/app.grapheneos.info.MainActivity
+
+shutdown:
+  - com.samiadom.Shutdown/com.samiadom.Shutdown.MainActivity
+
+stargon_browser:
+  - net.onecook.browser/net.onecook.browser.MainActivity
+
+strava_cz:
+  - cz.strava.app.twa/cz.strava.app.twa.LauncherActivity
+
+viking_app_poland:
+  - com.vikingco.vikingapp.poland/com.vikingco.ui.routing.RoutingActivity
+
+whoop:
+  - com.whoop.android/com.whoop.ui.home.redesign.view.MainActivity
+
+wikidex_net:
+  - net.wikidex.www.wikidex/net.wikidex.www.wikidex.SplashActivity
+
+_24pay:
+  - com.twentyfourpay/com.twentyfourpay.screens.splashScreen.SplashScreenActivity
