--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -109,3 +109,6 @@ wikidex_net:
 
 _24pay:
   - com.twentyfourpay/com.twentyfourpay.screens.splashScreen.SplashScreenActivity
+
+bitwarden:
+  - com.x8bit.bitwarden.beta/com.x8bit.bitwarden.MainActivity
