--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,7 +68,7 @@ videosummarizer:
 amazon_freevee:
   - com.amazon.imdb.tv.mobile.app/com.amazon.imdb.tv.mobile.app.rn.PlatformReactNativeActivity
 
-bpi:
+bank_of_the_philippine:
   - com.bpi.ng.app/com.bpi.ng.app.presentation.views.MainActivity
 
 caliber_strength_training:
