--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,79 @@ vat_calculator:
 innertune:
   - com.malopieds.innertune/com.malopieds.innertune.MainActivity
   - com.malopieds.innertune/com.malopieds.innertune.ui.activities.MainActivity
+
+dinamalar:
+  - com.softcraft.dinamalar/com.softcraft.dinamalar.view.activity.SplashActivity
+
+google_gemini_alt_1: {}
+
+infi:
+  - co.lenord.tvpgt/co.classplus.app.ui.common.splash.KSplashActivity
+
+jiojoin:
+  - com.jio.jse/com.jio.jse.mobile.ui.activity.SplashScreenActivity
+
+jiojoin_alt_1: {}
+
+soundbound:
+  - in.shabinder.soundbound/in.shabinder.soundbound.MainActivity
+
+stock_market_simulator:
+  - com.threeinvesteers.app/com.threeinvesteers.app.MainActivity
+
+sun_nxt:
+  - com.suntv.sunnxt/com.android.myplex.ui.sun.activities.SplashActivity
+
+tooly:
+  - com.yousx.thetoolsapp/com.yousx.thetoolsapp.SplashScreenActivity
+
+videosummarizer:
+  - com.emote.youtube_summarizer/com.emote.youtube_summarizer.MainActivity
+
+amazon_freevee:
+  - com.amazon.imdb.tv.mobile.app/com.amazon.imdb.tv.mobile.app.rn.PlatformReactNativeActivity
+
+bank_of_the_philippine:
+  - com.bpi.ng.app/com.bpi.ng.app.presentation.views.MainActivity
+
+caliber_strength_training:
+  - com.caliberfitness.app/com.caliberfitness.app.MainActivity
+
+cent_mobile:
+  - com.infrasofttech.CentralBank/com.infrasofttech.centralbank.SplashActivity
+
+crumblr:
+  - crumbl.cookies/com.crumbl.ui.SplashActivity
+
+flight_centre_mastercard:
+  - nz.co.flexicards.flightcentre/nz.co.flexicards.app.splash.SplashActivity
+
+forest_ebike_sharing:
+  - app.humanforest/com.example.forest_app.MainActivity
+
+graphene_info:
+  - app.grapheneos.info/app.grapheneos.info.MainActivity
+
+shutdown:
+  - com.samiadom.Shutdown/com.samiadom.Shutdown.MainActivity
+
+stargon_browser:
+  - net.onecook.browser/net.onecook.browser.MainActivity
+
+strava_cz:
+  - cz.strava.app.twa/cz.strava.app.twa.LauncherActivity
+
+viking_app_poland:
+  - com.vikingco.vikingapp.poland/com.vikingco.ui.routing.RoutingActivity
+
+whoop:
+  - com.whoop.android/com.whoop.ui.home.redesign.view.MainActivity
+
+wikidex_net:
+  - net.wikidex.www.wikidex/net.wikidex.www.wikidex.SplashActivity
+
+_24pay:
+  - com.twentyfourpay/com.twentyfourpay.screens.splashScreen.SplashScreenActivity
+
+bitwarden:
+  - com.x8bit.bitwarden.beta/com.x8bit.bitwarden.MainActivity
