--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,8 @@
 #
 # new_icon_2_alt_1: {}
 #
+notifications_recovery:
+  - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
+
+youtube_revanced_extended:
+  - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
