--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,5 +11,5 @@
 notifications_recovery:
   - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
 
-youtube_revanced_extended:
+rvx:
   - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
