Add "デジタル認証アプリ" as "Japan Digital Authentication App"

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,5 @@
 #
 # new_icon_2_alt_1: {}
 #
+japan_digital_authentication_app:
+  - jp.go.digital.auth_and_sign/jp.go.digital.auth_and_sign.ui.main.MainActivity
