removed rvx icon to link it with youtube_revanced_alt_7

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,5 +11,5 @@
 notifications_recovery:
   - com.alftendev.notlistener/com.android.alftendev.activities.MainActivity
 
-rvx:
+youtube_revanced_alt_7:
   - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
